# Zodiac-Mirror

./: .bashrc  .dir-locals.el  .gitignore  .mbsyncrc  .spacemacs  .xinitrc  .xsession  CMakeLists.txt  LICENSE  README.md  TODOs.org  create_linux_build.sh  create_windows_build.bat  notes.txt
.config/awesome/: autorun.sh  rc.lua
.config/awesome/themes/default/: theme.lua
.config/newsboat/: config  urls
.config/nvim/: init.vim
.config/termite/: config
.dwm/: autostart.sh
.fossil-settings/: ignore-glob
.mutt/: colors.muttrc  mailcap  muttrc
.scripts/: fetchmail  imap-pass
include/zodiac/: ast.h  atom.h  builtin.h  common.h  const_interpreter.h  copier.h  file_pos.h  hash.h  ir.h  ir_builder.h  ir_printer.h  ir_runner.h  lexer.h  llvm.h  llvm_debug_info.h  llvm_types.h  new_resolver.h  parser.h  platform.h  polymorph.h  resolver.h  stack_vm.h  stack_vm_generator.h  string_builder.h  token.h  type_info.h  types.h  zodiac.h
modules/: arena_allocator.zdc  builtin.zdc  c.zdc  c_allocator.zdc  gl.zdc  glfw.zdc  glfw_keys.zdc  os.zdc  os_generic.zdc  os_linux.zdc  os_windows.zdc  posix.zdc  print.zdc  process.zdc  pthread.zdc  random.zdc  std.zdc  string_builder.zdc  temp_allocator.zdc  thread.zdc  ztest.zdc
source/: ast.cpp  atom.cpp  builtin.cpp  common.cpp  compiler_main.cpp  const_interpreter.cpp  copier.cpp  hash.cpp  ir.cpp  ir_builder.cpp  ir_printer.cpp  ir_runner.cpp  ir_test.cpp  lexer.cpp  llvm.cpp  llvm_debug_info.cpp  llvm_types.cpp  main.cpp  new_resolver.cpp  parser.cpp  platform.cpp  polymorph.cpp  resolver.cpp  stack_vm.cpp  stack_vm_generator.cpp  string_builder.cpp  token.cpp  type_info.cpp  types.cpp  vm_test.cpp  zodiac.cpp
tests/: allocator_test.zdc  any_test.zdc  break_test.zdc  c.zdc  c_test.zdc  config.ztest  debug_info_test.zdc  defer_test.zdc  enums.zdc  first_class_types.zdc  floats.zdc  func_test.zdc  game.zdc  gl.zdc  glfw.zdc  glfw_keys.zdc  if_test.zdc  insert.zdc  io.zdc  io_test.zdc  lazy_test.zdc  libglfw.so.3.3  llvm_test.zdc  main.zdc  memory.zdc  mrv.zdc  new_resolver_test.zdc  operator_overloading_test.zdc  overload_test.zdc  pointer_math.zdc  print_test.zdc  scratch.zdc  simple_test.zdc  sizeof_test.zdc  static_array_test.zdc  std.zdc  std_test.zdc  stress_test_gen.py  string_builder.zdc  strings.zdc  (+11 more)
tests/broken/: defer_test.zdc  pointer_math.zdc  std_test.zdc  type_info_test.zdc  unions.zdc
